# duplix

./: CMakeLists.txt  Doxyfile  README.md
src/: CMakeLists.txt  main.cpp
src/duplix/: CMakeLists.txt  duplicate_file_finder.cpp  duplicate_file_finder.h  duplicates.cpp  duplicates.h  utilities.cpp  utilities.h
tests/: CMakeLists.txt  test.cpp  test_duplicate_file_finder.cpp  tests.cpp
